--- a/index.html
+++ b/index.html
@@ -8,19 +8,48 @@
     <title>Daniel's RPS Game</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <link href="https://fonts.googleapis.com/css?family=Joti+One" rel="stylesheet">
 </head>
 
 <body>
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                <h1><a href="http://linkedin.com">Daniel's RPS Game</a></h1>
+                <p class='text-center headerText'><a href="http://linkedin.com">Daniel's RPS Game</a></p>
             </li>
-            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-            <li class="toggle-topbar menu"><a href="http://facebook.com"><span>Visit My GitHub!</span></a></li>
         </ul>
-        
     </nav>
+    <div class='wholePage medium-12 columns'>
+        <p class='text-center instructions'>Welcome to my Rock, Paper, and Scissors Game!</p>
+    </div>
+    <div class="grid-x">
+        <div class="small-1 medium-1 large-1 cell"></div>
+        <div class="small-5 medium-5 large-5 cell">
+            <h3 class='player1Name'>Player #1</h3>
+            <div class="grid-x grid-margin-x">
+                <div class="small-2 cell"></div>
+                <div class="auto cell">
+                    <img src='images/rock.jpg' id='player2Rock'>
+                    <img src='images/paper.jpg' id='player2Paper'>
+                    <img src='images/scissor.jpg' id='player2Scissor'>
+                </div>
+                <div class="small-2 cell"></div>
+            </div>
+        </div>
+        <div class="small-5 medium-5 large-5 cell">
+            <h3 class='player2Name'>Player #2</h3>
+            <div class="grid-x grid-margin-x">
+                <div class="small-2 cell"></div>
+                <div class="auto cell">
+                    <img src='images/rock.jpg' id='player2Rock'>
+                    <img src='images/paper.jpg' id='player2Paper'>
+                    <img src='images/scissor.jpg' id='player2Scissor'>
+                </div>
+                <div class="small-2 cell"></div>
+            </div>
+        </div>
+        <div class="small-1 medium-1 large-1 cell"></div>
+    </div>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
